[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.177", features = ["derive"] }
config = "0.13.3"
chrono = "0.4.26"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
